--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -10,6 +10,6 @@ COPY ./conf/default /etc/nginx/sites-available/
 COPY ./conf/ssl-cert-snakeoil.pem /etc/ssl/certs/
 COPY ./conf/ssl-cert-snakeoil.key /etc/ssl/private/
 
-expose 443
+CMD ["nginx", "-g", "daemon off;"]
 
-CMD service nginx start && sleep infinity
+EXPOSE 443
