--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -6,5 +6,7 @@ RUN apt-get update &&\
 
 COPY ./conf/wp-config.php /var/www/html/wordpress/
 
+EXPOSE 8000
+
 CMD mkdir run/php && /usr/sbin/php-fpm7.3 --nodaemonize
 #CMD service php7.3-fpm start && service php7.3-fpm stop && /usr/sbin/php-fpm7.3 --nodaemonize
