YAML isn't workin anymore. I will try on linux

--- a/srcs/.env
+++ b/srcs/.env
@@ -2,6 +2,7 @@ DOMAIN_NAME=grezette.42.fr
 # certificates
 CERTS_=./XXXXXXXXXXXX
 # MYSQL SETUP
-MYSQL_ROOT_PASSWORD=ROOT_PASSWORD
-MYSQL_USER=USER
-MYSQL_PASSWORD=USER
+MYSQL_DATABASE=DB
+MYSQL_ROOT_PASSWORD=Tarteaufoutre
+MYSQL_USER=Maitre_Gims
+MYSQL_PASSWORD=mdr404!
