--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,6 +3,7 @@ FROM debian:buster
 RUN apt-get update && \
 	apt-get install -y mariadb-server mariadb-client mariadb-common
 
+RUN chmod 775 /var/lib/mysql
 COPY ./tools/init_db.sh /tmp
 COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/
 
