Need to do the make file and find a way to test my work

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -9,4 +9,4 @@ COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/
 
 EXPOSE 3306
 
-CMD service mysql start && sh /tmp/init_db.sh && mysql 
+CMD service mysql start && sh /tmp/init_db.sh && mysqld -u root 
