--- a/srcs/.env
+++ b/srcs/.env
@@ -6,3 +6,9 @@ MYSQL_DATABASE=DB
 MYSQL_ROOT_PASSWORD=Tarteaufoutre
 MYSQL_USER=Maitre_Gims
 MYSQL_PASSWORD=mdr404!
+WP_DATABASE=DB
+WP_ADMIN=Kingrezette
+WP_ADMIN_PASSWORD=password
+WP_USER=Macron
+WP_USER_PASSWORD=ghost
+WP_DB_HOST=mariadb
