need to configure correctly mysql. I also need to chack my default

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,10 +1,10 @@
-DOMAIN_NAME=grezette.42.fr
+DOMAIN_NAME=https://grezette.42.fr
 # MYSQL SETUP
 MYSQL_DATABASE=DB
 MYSQL_ROOT_PASSWORD=Tarteaufoutre
-MYSQL_USER=Maitre_Gims
-MYSQL_PASSWORD=mdr404!
-WP_DATABASE=DB
+MYSQL_USER=MaitreGims
+MYSQL_PASSWORD=mdr404
+WP_DATABASE=WP_DB
 WP_ADMIN=Kingrezette
 WP_ADMIN_PASSWORD=password
 WP_USER=Macron
