--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -413,10 +413,10 @@ pm.max_spare_servers = 3
 ;env[TMPDIR] = /tmp
 ;env[TEMP] = /tmp
 
-env[WP_DB_NAME] = $WP_DATABASE
-env[WP_DB_USER] = $WP_USER
-env[WP_DB_PW] = $WP_USER_PASSWORD
-env[WP_DB_HOST] = $WP_DB_HOST
+env[WP_DB_NAME] = $WORDPRESS_DB_NAME
+env[WP_DB_USER] = $WORDPRESS_DB_USER
+env[WP_DB_PW] = $WORDPRESS_DB_PASSWORD
+env[WP_DB_HOST] = $WORDPRESS_DB_HOST
 
 ; Additional php.ini defines, specific to this pool of workers. These settings
 ; overwrite the values previously defined in the php.ini. The directives are the
