--- a/srcs/.env
+++ b/srcs/.env
@@ -9,4 +9,4 @@ WP_ADMIN=Kingrezette
 WP_ADMIN_PASSWORD=password
 WP_USER=Macron
 WP_USER_PASSWORD=ghost
-WP_DB_HOST=mariadb
+WP_DB_HOST=mariadb:3306
