--- a/srcs/docker-compose.yaml
+++ b/srcs/docker-compose.yaml
@@ -2,7 +2,17 @@ version: '3.3'
 
 services:
     mysql:
-        build: ./requirements/mariadb
+        build:
+                context: ./requirements/mariadb
+                args:
+                        - MYSQL_DATABASE=$MYSQL_DATABASE
+                        - MYSQL_ROOT_PASSWORD=$MYSQ_ROOT_PASSWORD
+                        - MYSQL_USER=$MYSQL_USER
+                        - MYSQL_PASSWORD=$MYSQL_PASSWORD
+                        - WORDPRESS_ADMIN=$WP_ADMIN
+                        - WORDPRESS_ADMIN_PASSWORD=$WP_ADMIN_PASSWORD
+                        - WORDPRESS_DB_USER=$WP_USER
+                        - WORDPRESS_DB_PASSWORD=$WP_USER_PASSWORD
         restart: unless-stopped
         ports:
             - "3306"
@@ -17,16 +27,20 @@ services:
     wp:
         depends_on:
             - mysql
-        build: ./requirements/wordpress
+        build:
+              context: ./requirements/wordpress
+              args:
+                    - DOMAIN_NAME=$DOMAIN_NAME
+                    - WORDPRESS_DB_NAME=$WP_DATABASE
+                    - WORDPRESS_ADMIN=$WP_ADMIN
+                    - WORDPRESS_ADMIN_PASSWORD=$WP_ADMIN_PASSWORD
+                    - WORDPRESS_DB_USER=$WP_USER
+                    - WORDPRESS_DB_PASSWORD=$WP_USER_PASSWORD
+                    - WORDPRESS_DB_HOST=$WP_DB_HOST
         restart: unless-stopped
         ports:
             - "9000"
         env_file: ".env"
-        environment:
-            - WORDPRESS_DB_HOST=db:3306
-            - WORDPRESS_DB_USER=$MYSQL_USER
-            - WORDPRESS_DB_PASSWORD=$MYSQL_PASSWORD
-            - WORDPRESS_DB_NAME=wordpress
         volumes:
             - wordpress:/var/www/wordpress
         networks:
