--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,3 @@
-DOMAIN_NAME=https://grezette.42.fr
-# MYSQL SETUP
 MYSQL_DATABASE=DB
 MYSQL_ROOT_PASSWORD=Tarteaufoutre
 MYSQL_USER=MaitreGims
@@ -10,3 +8,4 @@ WP_ADMIN_PASSWORD=password
 WP_USER=Macron
 WP_USER_PASSWORD=ghost
 WP_DB_HOST=mariadb:3306
+DOMAIN_NAME="https://grezette.42.fr"
