--- a/srcs/docker-compose.yaml
+++ b/srcs/docker-compose.yaml
@@ -2,23 +2,22 @@ version: '3.3'
 
 services:
     mysql:
+        env_file:
+                - .env
         build:
                 context: ./requirements/mariadb
                 args:
                         - MYSQL_DATABASE=$MYSQL_DATABASE
-                        - MYSQL_ROOT_PASSWORD=$MYSQ_ROOT_PASSWORD
-                        - MYSQL_USER=$MYSQL_USER
-                        - MYSQL_PASSWORD=$MYSQL_PASSWORD
-                        - WORDPRESS_ADMIN=$WP_ADMIN
-                        - WORDPRESS_ADMIN_PASSWORD=$WP_ADMIN_PASSWORD
-                        - WORDPRESS_DB_USER=$WP_USER
-                        - WORDPRESS_DB_PASSWORD=$WP_USER_PASSWORD
+                        - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+                        - MYSQL_USER=${MYSQL_USER}
+                        - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+                        - WP_ADMIN=${WP_ADMIN}
+                        - WP_ADMIN_PASSWORD=${WP_ADMIN_PASSWORD}
+                        - WP_USER=${WP_USER}
+                        - WP_USER_PASSWORD=${WP_USER_PASSWORD}
         restart: unless-stopped
         ports:
             - "3306"
-        env_file: ".env"
-        environment:
-            - MYSQL_DATABASE=wordpress
         volumes:
             - dbdata:/var/lib/
         networks:
@@ -27,20 +26,20 @@ services:
     wp:
         depends_on:
             - mysql
+        env_file: .env
         build:
               context: ./requirements/wordpress
-              args:
-                    - DOMAIN_NAME=$DOMAIN_NAME
-                    - WORDPRESS_DB_NAME=$WP_DATABASE
-                    - WORDPRESS_ADMIN=$WP_ADMIN
-                    - WORDPRESS_ADMIN_PASSWORD=$WP_ADMIN_PASSWORD
-                    - WORDPRESS_DB_USER=$WP_USER
-                    - WORDPRESS_DB_PASSWORD=$WP_USER_PASSWORD
-                    - WORDPRESS_DB_HOST=$WP_DB_HOST
         restart: unless-stopped
+        #environment:
+        #        - DOMAIN_NAME:$DOMAIN_NAME
+        #        - WP_DATABASE:"${WP_DATABASE}"
+        #        - WP_ADMIN:"${WP_ADMIN}"
+        #        - WP_ADMIN_PASSWORD:"${WP_ADMIN_PASSWORD}"
+        #        - WP_USER:"${WP_USER}"
+        #        - WP_USER_PASSWORD:"${WP_USER_PASSWORD}"
+        #        - WP_DB_HOST:"${WP_DB_HOST}"
         ports:
             - "9000"
-        env_file: ".env"
         volumes:
             - wordpress:/var/www/wordpress
         networks:
