--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -5,12 +5,12 @@ ARG MYSQL_ROOT_PASSWORD
 ARG MYSQL_USER
 ARG MYSQL_PASSWORD
 ARG WORDPRESS_ADMIN
-ARG WORDPRESS_ADMIN_PASSWORD
-ARG WORDPRESS_DB_USER
-ARG WORDPRESS_DB_PASSWORD
+ARG WP_ADMIN_PASSWORD
+ARG WP_USER
+ARG WP_USER_PASSWORD
 
 RUN apt-get update && \
-	apt-get install -y php-mysql default-mysql-server
+	apt-get install -y mariadb-server
 
 RUN chmod 775 /var/lib/mysql
 
@@ -18,7 +18,7 @@ COPY ./tools/init_db.sh /tmp
 #COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/
 COPY ./conf/my.cnf /etc/my.cnf.d/mariadb-server.cnf
 
-RUN service mysql restart && \
+RUN service mysql start && \
 	sh /tmp/init_db.sh
 
 EXPOSE 3306
