--- a/srcs/requirements/mariadb/conf/my.cnf
+++ b/srcs/requirements/mariadb/conf/my.cnf
@@ -2,9 +2,9 @@
 user = mysql
 datadir = '/var/lib/mysql'
 bind-address = 0.0.0.0
-socket = /var/lib/mysql/mysql.sock
+socket = /var/run/mysqld/mysql.sock
 port = 3306
 
 [mysql]
-socket = /var/lib/mysql/mysql.sock
+socket = /var/run/mysqld/mysql.sock
 port = 3306
