--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,5 +1,6 @@
 FROM debian:buster
 
+ARG DOMAIN_NAME
 ARG WP_DATABASE
 ARG WP_ADMIN
 ARG WP_ADMIN_PASSWORD
@@ -8,7 +9,7 @@ ARG WP_USER_PASSWORD
 ARG WP_DB_HOST
 
 RUN apt-get update && \
-	apt-get install -y php7.3-fpm mariadb-client curl && \
+	apt-get install -y php-cgi php-common php-fpm php-pear php-mbstring php-zip php-net-socket php-gd php-xml-util php-gettext php-mysql php-bcmath mariadb-client curl && \
 	mkdir -p /var/www/wordpress && \
 	cd /tmp && \
 	curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar  && \
@@ -27,12 +28,19 @@ RUN adduser --disabled-password -gecos 'wp' wp && \
 	chmod -R 777 var/www/ && \
 	su - wp -c 'wp core download --path=/var/www/wordpress'
 
+RUN sh /tmp/init_wordpress.sh
+
+RUN service php7.3-fpm start
+
+#RUN mkdir -p /var/run/php
 
 EXPOSE 9000
 
 #CMD service php7.3-fpm start && php7.3-fpm -F -R
 
-CMD sh /tmp/init_wordpress.sh && php -S 127.0.0.1:9000 -t /var/www/wordpress
+CMD php -S 127.0.0.1:9000 -t /var/www/wordpress
+
+#CMD sh /tmp/init_wordpress.sh && php -S 127.0.0.1:9000 -t /var/www/wordpress
 
 #/usr/sbin/php-fpm7.3 --nodaemonize
 #CMD service php7.3-fpm start && service php7.3-fpm stop && /usr/sbin/php-fpm7.3 --nodaemonize
