I need to connect my wordpress to my mariadb

--- a/srcs/.env
+++ b/srcs/.env
@@ -8,4 +8,4 @@ WP_ADMIN_PASSWORD=chiant
 WP_USER=Macron
 WP_USER_PASSWORD=ghost
 WP_DB_HOST=mariadb:3306
-DOMAIN_NAME="https://grezette.42.fr"
+DOMAIN_NAME=https://grezette.42.fr
