--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -20,8 +20,8 @@
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
-user = www-data
-group = www-data
+user  = nginx 
+group = nginx 
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
@@ -33,7 +33,7 @@ group = www-data
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = /run/php/php7.3-fpm.sock
+listen = 9000
 
 ; Set listen(2) backlog.
 ; Default Value: 511 (-1 on FreeBSD and OpenBSD)
@@ -45,8 +45,8 @@ listen = /run/php/php7.3-fpm.sock
 ; and group can be specified either by name or by their numeric IDs.
 ; Default Values: user and group are set as the running user
 ;                 mode is set to 0660
-listen.owner = www-data
-listen.group = www-data
+;listen.owner = nobody
+;listen.group = nobody
 ;listen.mode = 0660
 ; When POSIX Access Control Lists are supported you can set them using
 ; these options, value is a comma separated list of user/group names.
@@ -60,7 +60,10 @@ listen.group = www-data
 ; must be separated by a comma. If this value is left blank, connections will be
 ; accepted from any ip address.
 ; Default Value: any
-;listen.allowed_clients = 127.0.0.1
+
+; We want any container on the container network to be able to access php-fpm.
+
+;listen.allowed_clients = any
 
 ; Specify the nice(2) priority to apply to the pool processes (only if set)
 ; The value can vary from -19 (highest priority) to 20 (lower priority)
@@ -115,7 +118,7 @@ pm.max_children = 5
 
 ; The number of child processes created on startup.
 ; Note: Used only when pm is set to 'dynamic'
-; Default Value: min_spare_servers + (max_spare_servers - min_spare_servers) / 2
+; Default Value: (min_spare_servers + max_spare_servers) / 2
 pm.start_servers = 2
 
 ; The desired minimum number of idle server processes.
@@ -230,7 +233,7 @@ pm.max_spare_servers = 3
 ;   last request memory:  0
 ;
 ; Note: There is a real-time FPM status monitoring sample web page available
-;       It's available in: /usr/share/php/7.3/fpm/status.html
+;       It's available in: /usr/share/php7/fpm/status.html
 ;
 ; Note: The value must start with a leading slash (/). The value can be
 ;       anything, but it may not be a good idea to use the .php extension or it
@@ -257,7 +260,7 @@ pm.max_spare_servers = 3
 
 ; The access log file
 ; Default: not set
-;access.log = log/$pool.access.log
+;access.log = log/php7/$pool.access.log
 
 ; The access log format.
 ; The following syntax is allowed
@@ -321,7 +324,7 @@ pm.max_spare_servers = 3
 ; The log file for slow requests
 ; Default Value: not set
 ; Note: slowlog is mandatory if request_slowlog_timeout is set
-;slowlog = log/$pool.log.slow
+;slowlog = log/php7/$pool.slow.log
 
 ; The timeout for serving a single request after which a PHP backtrace will be
 ; dumped to the 'slowlog' file. A value of '0s' means 'off'.
@@ -413,10 +416,16 @@ pm.max_spare_servers = 3
 ;env[TMPDIR] = /tmp
 ;env[TEMP] = /tmp
 
-env[WP_DB_NAME] = $WORDPRESS_DB_NAME
-env[WP_DB_USER] = $WORDPRESS_DB_USER
-env[WP_DB_PW] = $WORDPRESS_DB_PASSWORD
-env[WP_DB_HOST] = $WORDPRESS_DB_HOST
+; Let php-fpm know about REDIS credentials as they are getenv()-ed in
+; wp-config.php
+
+;env[REDIS_HOST] = $REDIS_HOST
+;env[REDIS_PORT] = $REDIS_PORT
+env[MARIADB_HOST] = mariadb
+env[MARIADB_DATABASE] = $MYSQL_DATABASE
+env[MARIADB_USER] = $WP_ADMIN
+env[MARIADB_PASSWORD] = $WP_ADMIN_PASSWORD
+env[MARIADB_PORT] = 3306
 
 ; Additional php.ini defines, specific to this pool of workers. These settings
 ; overwrite the values previously defined in the php.ini. The directives are the
@@ -439,6 +448,11 @@ env[WP_DB_HOST] = $WORDPRESS_DB_HOST
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
 ;php_flag[display_errors] = off
-;php_admin_value[error_log] = /var/log/fpm-php.www.log
+;php_admin_value[error_log] = /var/log/php7/$pool.error.log
 ;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
+
+catch_workers_output = yes
+php_flag[display_errors] = on
+php_admin_value[error_log] = /var/log/php-fpm/$pool.error.log
+php_admin_flag[log_errors] = on
