--- a/srcs/.env
+++ b/srcs/.env
@@ -7,5 +7,5 @@ WP_ADMIN=Kingrezette
 WP_ADMIN_PASSWORD=chiant
 WP_USER=Macron
 WP_USER_PASSWORD=ghost
-WP_DB_HOST=mariadb:3306
+WP_DB_HOST=mariadb
 DOMAIN_NAME=https://grezette.42.fr
