--- a/srcs/docker-compose.yaml
+++ b/srcs/docker-compose.yaml
@@ -67,13 +67,13 @@ volumes:
         driver_opts:
             o: bind
             type: volume
-            device: /home/user42/data/dbdata
+            device: $HOME/data/dbdata
     wordpress:
         driver: local
         driver_opts:
             o: bind
             type: volume
-            device: /home/user42/data/wordpress
+            device: $HOME/data/wordpress
 
 networks:
     app-network:
