--- a/srcs/docker-compose.yaml
+++ b/srcs/docker-compose.yaml
@@ -64,13 +64,13 @@ volumes:
         driver: local
         driver_opts:
             o: bind
-            type: volume
+            type: none
             device: $HOME/data/dbdata
     wordpress:
         driver: local
         driver_opts:
             o: bind
-            type: volume
+            type: none
             device: $HOME/data/wordpress
 
 networks:
