Need to clean the git and we escape the blackhole

--- a/srcs/docker-compose.yaml
+++ b/srcs/docker-compose.yaml
@@ -24,6 +24,7 @@ services:
         networks:
             - app-network
         tty: true
+        stdin_open: true
     wordpress:
         depends_on:
             - mariadb
